# ez-ram-graphs-core

./: .dockerignore  .env.example  .gitignore  DOCKER-LOCAL-SETUP.md  DOCKER-OPTIMIZATION.md  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  PRACTICAL_EXAMPLE.py  QUICK_START_EXPORT.md  README_PRODUCTION.md  batch_import_questions.py  command.ipynb  cypher_django_guideline.md  db.sqlite3  docker-compose.yml  docker-entrypoint.sh  find_neo4j_connection.py  main.py  pyproject.toml  quick-start.sh  requirements-docker.txt  requirements.txt  setup_env.py  system_prompt.txt  test_connection.py  test_credentials.py  test_neo4j_connection.py
ai_module/: GUIDELINE.md  __init__.py  cli.py  config.py  kernel.py  orchestrator.py  registry.py  safety.py  schemas.py
core/: api.py  env.py  exceptions.py  health.py  services.py  settings.py  urls.py
docs/: architecture_overview.md  documentation_reorganization.md  neo4j_schema.md  url_refactoring_history.md  url_structure.md
knowledge/: neo_models.py  urls.py
predictions/: RAM1111_12tens_Future_Future Continuous Tense_Common Errors and Troublespots_mappings.json  RAM1111_12tens_Future_Future Continuous Tense_Comparison with Other Tenses_mappings.json  RAM1111_12tens_Future_Future Continuous Tense_Form and Structure_mappings.json  RAM1111_12tens_Future_Future Continuous Tense_Time Expressions_mappings.json  RAM1111_12tens_Future_Future Continuous Tense_Uses_mappings.json  RAM1111_12tens_Future_Future Perfect Continuous Tense_Common Errors and Troublespots_mappings.json  RAM1111_12tens_Future_Future Simple Tense_Uses_mappings.json  (+158 more)
(+279 files in other folders)
