[project]
name = "ez-ram"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.5"
dependencies = [
    "django>=4.2,<5.0",
    "django-neomodel>=0.2.0",
    "djangorestframework>=3.14.0",
    "dotenv>=0.9.9",
    "google-cloud-secret-manager>=2.24.0",
    "google-genai>=1.39.0",
    "neo4j>=5.0.0",
    "neomodel>=5.0.0",
    "networkx>=3.0",
    "numpy>=2.3.3",
    "openai>=1.109.1",
    "psycopg[binary]>=3.2.10",
    "pydantic>=2.0,<3.0",
    "sentence-transformers>=5.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "freezegun>=1.2",
    "hypothesis>=6.0",
]
